{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 506,
  "lineage": "631529b5-9e9f-b7e7-b8a0-051ff3b8159c",
  "resources": [
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_instance",
      "name": "chatapp3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0bbdd8c17ed981ef9",
            "arn": "arn:aws:ec2:us-east-1:008342298769:instance/i-0817d2d47ccb578de",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0817d2d47ccb578de",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "chatapp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0d7d025a321d76122"
              }
            ],
            "primary_network_interface_id": "eni-0d7d025a321d76122",
            "private_dns": "ip-10-0-2-146.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.146",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0edae7a1aa18a80a9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05e24a6b0608e5941",
            "tags": {
              "Name": "chatapp3"
            },
            "tags_all": {
              "Name": "chatapp3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ee0dcb4420f91616"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "008342298769",
            "id": "i-0817d2d47ccb578de",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.app.null_resource.bastion_trigger",
            "module.bast.aws_instance.chatbast3",
            "module.sg.aws_security_group.albappsg",
            "module.sg.aws_security_group.albwebsg",
            "module.sg.aws_security_group.chatappsg",
            "module.sg.aws_security_group.chatbastsg",
            "module.sg.aws_security_group.chatdbsg",
            "module.sg.aws_security_group.chatwebsg",
            "module.vpc.aws_subnet.prisuba3",
            "module.vpc.aws_subnet.prisubb3",
            "module.vpc.aws_subnet.prisubc3",
            "module.vpc.aws_subnet.pubsuba3",
            "module.vpc.aws_subnet.pubsubb3",
            "module.vpc.aws_subnet.pubsubc3",
            "module.vpc.aws_vpc.ShaneVPC3"
          ]
        }
      ]
    },
    {
      "module": "module.bast",
      "mode": "managed",
      "type": "aws_instance",
      "name": "chatbast3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0bbdd8c17ed981ef9",
            "arn": "arn:aws:ec2:us-east-1:008342298769:instance/i-0c0e549521f15cb56",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c0e549521f15cb56",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "chatapp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0ac3ec356116ae97f"
              }
            ],
            "primary_network_interface_id": "eni-0ac3ec356116ae97f",
            "private_dns": "ip-10-0-2-8.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.8",
            "public_ip": "3.235.55.158",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a6d5b24a2ecf9a6d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08ea62c5be88ae037",
            "tags": {
              "Name": "chatbast3"
            },
            "tags_all": {
              "Name": "chatbast3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04baec181f086a7b6"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "008342298769",
            "id": "i-0c0e549521f15cb56",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.sg.aws_security_group.albappsg",
            "module.sg.aws_security_group.albwebsg",
            "module.sg.aws_security_group.chatappsg",
            "module.sg.aws_security_group.chatbastsg",
            "module.sg.aws_security_group.chatdbsg",
            "module.sg.aws_security_group.chatwebsg",
            "module.vpc.aws_subnet.pubsuba3",
            "module.vpc.aws_subnet.pubsubb3",
            "module.vpc.aws_subnet.pubsubc3",
            "module.vpc.aws_vpc.ShaneVPC3"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_instance",
      "name": "chatdb3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0bbdd8c17ed981ef9",
            "arn": "arn:aws:ec2:us-east-1:008342298769:instance/i-0fcafed0f3a65dad5",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fcafed0f3a65dad5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "chatapp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0ea2f64ca6a7bf08a"
              }
            ],
            "primary_network_interface_id": "eni-0ea2f64ca6a7bf08a",
            "private_dns": "ip-10-0-2-151.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.151",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03424e1e2bb5dab5c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05e24a6b0608e5941",
            "tags": {
              "Name": "chatdb3"
            },
            "tags_all": {
              "Name": "chatdb3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-042713e2715bf525d"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "008342298769",
            "id": "i-0fcafed0f3a65dad5",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.bast.aws_instance.chatbast3",
            "module.sg.aws_security_group.albappsg",
            "module.sg.aws_security_group.albwebsg",
            "module.sg.aws_security_group.chatappsg",
            "module.sg.aws_security_group.chatbastsg",
            "module.sg.aws_security_group.chatdbsg",
            "module.sg.aws_security_group.chatwebsg",
            "module.vpc.aws_subnet.prisuba3",
            "module.vpc.aws_subnet.prisubb3",
            "module.vpc.aws_subnet.prisubc3",
            "module.vpc.aws_subnet.pubsuba3",
            "module.vpc.aws_subnet.pubsubb3",
            "module.vpc.aws_subnet.pubsubc3",
            "module.vpc.aws_vpc.ShaneVPC3"
          ]
        }
      ]
    },
    {
      "module": "module.intalb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "intalb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:008342298769:loadbalancer/app/internalalb/294e7a7d44a9aade",
            "arn_suffix": "app/internalalb/294e7a7d44a9aade",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-internalalb-361415342.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:008342298769:loadbalancer/app/internalalb/294e7a7d44a9aade",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "internalalb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-004bade0f3cc16e7a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-022b407bca8bdba1c"
              },
              {
                "subnet_id": "subnet-05e24a6b0608e5941"
              },
              {
                "subnet_id": "subnet-086f4da068886dc43"
              }
            ],
            "subnets": [
              "subnet-022b407bca8bdba1c",
              "subnet-05e24a6b0608e5941",
              "subnet-086f4da068886dc43"
            ],
            "vpc_id": "vpc-0a38573db25c26bda",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:008342298769:loadbalancer/app/internalalb/294e7a7d44a9aade"
          },
          "dependencies": [
            "module.sg.aws_security_group.albappsg",
            "module.sg.aws_security_group.albwebsg",
            "module.sg.aws_security_group.chatappsg",
            "module.sg.aws_security_group.chatbastsg",
            "module.sg.aws_security_group.chatdbsg",
            "module.sg.aws_security_group.chatwebsg",
            "module.vpc.aws_subnet.prisuba3",
            "module.vpc.aws_subnet.prisubb3",
            "module.vpc.aws_subnet.prisubc3",
            "module.vpc.aws_vpc.ShaneVPC3"
          ]
        }
      ]
    },
    {
      "module": "module.intalb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "intalblist",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:008342298769:listener/app/internalalb/294e7a7d44a9aade/78749c244944b5f1",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:008342298769:targetgroup/internal-alb-tg/65d8bcdf2fbd5626",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:008342298769:listener/app/internalalb/294e7a7d44a9aade/78749c244944b5f1",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:008342298769:loadbalancer/app/internalalb/294e7a7d44a9aade",
            "mutual_authentication": [],
            "port": 8001,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:008342298769:listener/app/internalalb/294e7a7d44a9aade/78749c244944b5f1"
          },
          "dependencies": [
            "module.intalb.aws_lb.intalb",
            "module.intalb.aws_lb_target_group.intalbtg",
            "module.sg.aws_security_group.albappsg",
            "module.sg.aws_security_group.albwebsg",
            "module.sg.aws_security_group.chatappsg",
            "module.sg.aws_security_group.chatbastsg",
            "module.sg.aws_security_group.chatdbsg",
            "module.sg.aws_security_group.chatwebsg",
            "module.vpc.aws_subnet.prisuba3",
            "module.vpc.aws_subnet.prisubb3",
            "module.vpc.aws_subnet.prisubc3",
            "module.vpc.aws_vpc.ShaneVPC3"
          ]
        }
      ]
    },
    {
      "module": "module.intalb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "intalbtg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:008342298769:targetgroup/internal-alb-tg/65d8bcdf2fbd5626",
            "arn_suffix": "targetgroup/internal-alb-tg/65d8bcdf2fbd5626",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:008342298769:targetgroup/internal-alb-tg/65d8bcdf2fbd5626",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:008342298769:loadbalancer/app/internalalb/294e7a7d44a9aade"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "internal-alb-tg",
            "port": 8001,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0a38573db25c26bda"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:008342298769:targetgroup/internal-alb-tg/65d8bcdf2fbd5626"
          },
          "dependencies": [
            "module.vpc.aws_vpc.ShaneVPC3"
          ]
        }
      ]
    },
    {
      "module": "module.intalb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "intalbtgatt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:008342298769:targetgroup/internal-alb-tg/65d8bcdf2fbd5626-20251024093902091700000001",
            "port": 8001,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:008342298769:targetgroup/internal-alb-tg/65d8bcdf2fbd5626",
            "target_id": "i-0817d2d47ccb578de"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.app.aws_instance.chatapp3",
            "module.app.null_resource.bastion_trigger",
            "module.bast.aws_instance.chatbast3",
            "module.intalb.aws_lb_target_group.intalbtg",
            "module.sg.aws_security_group.albappsg",
            "module.sg.aws_security_group.albwebsg",
            "module.sg.aws_security_group.chatappsg",
            "module.sg.aws_security_group.chatbastsg",
            "module.sg.aws_security_group.chatdbsg",
            "module.sg.aws_security_group.chatwebsg",
            "module.vpc.aws_subnet.prisuba3",
            "module.vpc.aws_subnet.prisubb3",
            "module.vpc.aws_subnet.prisubc3",
            "module.vpc.aws_subnet.pubsuba3",
            "module.vpc.aws_subnet.pubsubb3",
            "module.vpc.aws_subnet.pubsubc3",
            "module.vpc.aws_vpc.ShaneVPC3"
          ]
        }
      ]
    },
    {
      "module": "module.pubalb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "pubalb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:008342298769:loadbalancer/app/internet-facing-alb/c0c92b3a4542f24c",
            "arn_suffix": "app/internet-facing-alb/c0c92b3a4542f24c",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internet-facing-alb-294057928.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:008342298769:loadbalancer/app/internet-facing-alb/c0c92b3a4542f24c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "internet-facing-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-00080bff3c984ab6b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0393fe84ad0df3d32"
              },
              {
                "subnet_id": "subnet-073354a7309f187bd"
              },
              {
                "subnet_id": "subnet-08ea62c5be88ae037"
              }
            ],
            "subnets": [
              "subnet-0393fe84ad0df3d32",
              "subnet-073354a7309f187bd",
              "subnet-08ea62c5be88ae037"
            ],
            "vpc_id": "vpc-0a38573db25c26bda",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:008342298769:loadbalancer/app/internet-facing-alb/c0c92b3a4542f24c"
          },
          "dependencies": [
            "module.sg.aws_security_group.albappsg",
            "module.sg.aws_security_group.albwebsg",
            "module.sg.aws_security_group.chatappsg",
            "module.sg.aws_security_group.chatbastsg",
            "module.sg.aws_security_group.chatdbsg",
            "module.sg.aws_security_group.chatwebsg",
            "module.vpc.aws_subnet.pubsuba3",
            "module.vpc.aws_subnet.pubsubb3",
            "module.vpc.aws_subnet.pubsubc3",
            "module.vpc.aws_vpc.ShaneVPC3"
          ]
        }
      ]
    },
    {
      "module": "module.pubalb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "pubalblist",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:008342298769:listener/app/internet-facing-alb/c0c92b3a4542f24c/b1215a20128920fd",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:008342298769:targetgroup/internet-facing-alb-tg/776b7bea6ba9b5b5",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:008342298769:listener/app/internet-facing-alb/c0c92b3a4542f24c/b1215a20128920fd",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:008342298769:loadbalancer/app/internet-facing-alb/c0c92b3a4542f24c",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:008342298769:listener/app/internet-facing-alb/c0c92b3a4542f24c/b1215a20128920fd"
          },
          "dependencies": [
            "module.pubalb.aws_lb.pubalb",
            "module.pubalb.aws_lb_target_group.pubalbtg",
            "module.sg.aws_security_group.albappsg",
            "module.sg.aws_security_group.albwebsg",
            "module.sg.aws_security_group.chatappsg",
            "module.sg.aws_security_group.chatbastsg",
            "module.sg.aws_security_group.chatdbsg",
            "module.sg.aws_security_group.chatwebsg",
            "module.vpc.aws_subnet.pubsuba3",
            "module.vpc.aws_subnet.pubsubb3",
            "module.vpc.aws_subnet.pubsubc3",
            "module.vpc.aws_vpc.ShaneVPC3"
          ]
        }
      ]
    },
    {
      "module": "module.pubalb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "pubalbtg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:008342298769:targetgroup/internet-facing-alb-tg/776b7bea6ba9b5b5",
            "arn_suffix": "targetgroup/internet-facing-alb-tg/776b7bea6ba9b5b5",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:008342298769:targetgroup/internet-facing-alb-tg/776b7bea6ba9b5b5",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:008342298769:loadbalancer/app/internet-facing-alb/c0c92b3a4542f24c"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "internet-facing-alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0a38573db25c26bda"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:008342298769:targetgroup/internet-facing-alb-tg/776b7bea6ba9b5b5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.ShaneVPC3"
          ]
        }
      ]
    },
    {
      "module": "module.pubalb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "pubalbtgatt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:008342298769:targetgroup/internet-facing-alb-tg/776b7bea6ba9b5b5-20251024115804545100000002",
            "port": 80,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:008342298769:targetgroup/internet-facing-alb-tg/776b7bea6ba9b5b5",
            "target_id": "i-0fb5791b84d497dcc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.bast.aws_instance.chatbast3",
            "module.pubalb.aws_lb_target_group.pubalbtg",
            "module.sg.aws_security_group.albappsg",
            "module.sg.aws_security_group.albwebsg",
            "module.sg.aws_security_group.chatappsg",
            "module.sg.aws_security_group.chatbastsg",
            "module.sg.aws_security_group.chatdbsg",
            "module.sg.aws_security_group.chatwebsg",
            "module.vpc.aws_subnet.pubsuba3",
            "module.vpc.aws_subnet.pubsubb3",
            "module.vpc.aws_subnet.pubsubc3",
            "module.vpc.aws_vpc.ShaneVPC3",
            "module.web.aws_instance.chatweb3",
            "module.web.null_resource.bastion_trigger"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "albappsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:008342298769:security-group/sg-004bade0f3cc16e7a",
            "description": "SG for ALB infront of App Tier",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-004bade0f3cc16e7a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8001
              }
            ],
            "name": "albappsg",
            "name_prefix": "",
            "owner_id": "008342298769",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a38573db25c26bda"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "008342298769",
            "id": "sg-004bade0f3cc16e7a",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.ShaneVPC3"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "albwebsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:008342298769:security-group/sg-00080bff3c984ab6b",
            "description": "SG for ALB infront of Web Tier",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00080bff3c984ab6b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "albwebsg",
            "name_prefix": "",
            "owner_id": "008342298769",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a38573db25c26bda"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "008342298769",
            "id": "sg-00080bff3c984ab6b",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.ShaneVPC3"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "chatappsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:008342298769:security-group/sg-0ee0dcb4420f91616",
            "description": "This is Security Group for Chat App Tier",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ee0dcb4420f91616",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04baec181f086a7b6"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-004bade0f3cc16e7a"
                ],
                "self": false,
                "to_port": 8001
              }
            ],
            "name": "chatappsg",
            "name_prefix": "",
            "owner_id": "008342298769",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a38573db25c26bda"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "008342298769",
            "id": "sg-0ee0dcb4420f91616",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.ShaneVPC3"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "chatbastsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:008342298769:security-group/sg-04baec181f086a7b6",
            "description": "SG for Bastion Host",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04baec181f086a7b6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "chatbastsg",
            "name_prefix": "",
            "owner_id": "008342298769",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a38573db25c26bda"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "008342298769",
            "id": "sg-04baec181f086a7b6",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.ShaneVPC3"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "chatdbsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:008342298769:security-group/sg-042713e2715bf525d",
            "description": "This is Security Group for DB Tier",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-042713e2715bf525d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04baec181f086a7b6"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ee0dcb4420f91616"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "chatdbsg",
            "name_prefix": "",
            "owner_id": "008342298769",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a38573db25c26bda"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "008342298769",
            "id": "sg-042713e2715bf525d",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.ShaneVPC3"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "chatwebsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:008342298769:security-group/sg-097b4a1fccf7795c3",
            "description": "This is Security Group for Chat Web Tier",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-097b4a1fccf7795c3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04baec181f086a7b6"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "chatwebsg",
            "name_prefix": "",
            "owner_id": "008342298769",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a38573db25c26bda"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "008342298769",
            "id": "sg-097b4a1fccf7795c3",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.ShaneVPC3"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "random-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:008342298769:security-group/sg-0bfc6e31b48a68659",
            "description": "Random SG for checking tainting",
            "egress": [],
            "id": "sg-0bfc6e31b48a68659",
            "ingress": [],
            "name": "random-sg",
            "name_prefix": "",
            "owner_id": "008342298769",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a38573db25c26bda"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "008342298769",
            "id": "sg-0bfc6e31b48a68659",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.ShaneVPC3"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "albappsgid",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:008342298769:security-group-rule/sgr-070317143d67cd393",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-070317143d67cd393",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-004bade0f3cc16e7a",
            "security_group_rule_id": "sgr-070317143d67cd393",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "008342298769",
            "id": "sgr-070317143d67cd393",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.sg.aws_security_group.albappsg",
            "module.sg.aws_security_group.albwebsg",
            "module.sg.aws_security_group.chatappsg",
            "module.sg.aws_security_group.chatbastsg",
            "module.sg.aws_security_group.chatdbsg",
            "module.sg.aws_security_group.chatwebsg",
            "module.vpc.aws_vpc.ShaneVPC3"
          ]
        },
        {
          "index_key": "albwebsgid",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:008342298769:security-group-rule/sgr-0cdc73c2372992eff",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0cdc73c2372992eff",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-00080bff3c984ab6b",
            "security_group_rule_id": "sgr-0cdc73c2372992eff",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "008342298769",
            "id": "sgr-0cdc73c2372992eff",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.sg.aws_security_group.albappsg",
            "module.sg.aws_security_group.albwebsg",
            "module.sg.aws_security_group.chatappsg",
            "module.sg.aws_security_group.chatbastsg",
            "module.sg.aws_security_group.chatdbsg",
            "module.sg.aws_security_group.chatwebsg",
            "module.vpc.aws_vpc.ShaneVPC3"
          ]
        },
        {
          "index_key": "chatappsgid",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:008342298769:security-group-rule/sgr-01d810b75498d420d",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-01d810b75498d420d",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0ee0dcb4420f91616",
            "security_group_rule_id": "sgr-01d810b75498d420d",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "008342298769",
            "id": "sgr-01d810b75498d420d",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.sg.aws_security_group.albappsg",
            "module.sg.aws_security_group.albwebsg",
            "module.sg.aws_security_group.chatappsg",
            "module.sg.aws_security_group.chatbastsg",
            "module.sg.aws_security_group.chatdbsg",
            "module.sg.aws_security_group.chatwebsg",
            "module.vpc.aws_vpc.ShaneVPC3"
          ]
        },
        {
          "index_key": "chatbastsgid",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:008342298769:security-group-rule/sgr-0d29b55439421bd89",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0d29b55439421bd89",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-04baec181f086a7b6",
            "security_group_rule_id": "sgr-0d29b55439421bd89",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "008342298769",
            "id": "sgr-0d29b55439421bd89",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.sg.aws_security_group.albappsg",
            "module.sg.aws_security_group.albwebsg",
            "module.sg.aws_security_group.chatappsg",
            "module.sg.aws_security_group.chatbastsg",
            "module.sg.aws_security_group.chatdbsg",
            "module.sg.aws_security_group.chatwebsg",
            "module.vpc.aws_vpc.ShaneVPC3"
          ]
        },
        {
          "index_key": "chatdbsgid",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:008342298769:security-group-rule/sgr-0c0eaede39c40e54f",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0c0eaede39c40e54f",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-042713e2715bf525d",
            "security_group_rule_id": "sgr-0c0eaede39c40e54f",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "008342298769",
            "id": "sgr-0c0eaede39c40e54f",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.sg.aws_security_group.albappsg",
            "module.sg.aws_security_group.albwebsg",
            "module.sg.aws_security_group.chatappsg",
            "module.sg.aws_security_group.chatbastsg",
            "module.sg.aws_security_group.chatdbsg",
            "module.sg.aws_security_group.chatwebsg",
            "module.vpc.aws_vpc.ShaneVPC3"
          ]
        },
        {
          "index_key": "chatwebsgid",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:008342298769:security-group-rule/sgr-0761b22bc2b80f6cf",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0761b22bc2b80f6cf",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-097b4a1fccf7795c3",
            "security_group_rule_id": "sgr-0761b22bc2b80f6cf",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "008342298769",
            "id": "sgr-0761b22bc2b80f6cf",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.sg.aws_security_group.albappsg",
            "module.sg.aws_security_group.albwebsg",
            "module.sg.aws_security_group.chatappsg",
            "module.sg.aws_security_group.chatbastsg",
            "module.sg.aws_security_group.chatdbsg",
            "module.sg.aws_security_group.chatwebsg",
            "module.vpc.aws_vpc.ShaneVPC3"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "albappsgin",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:008342298769:security-group-rule/sgr-0cc49696aa44a3cef",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 8001,
            "id": "sgr-0cc49696aa44a3cef",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-004bade0f3cc16e7a",
            "security_group_rule_id": "sgr-0cc49696aa44a3cef",
            "tags": null,
            "tags_all": {},
            "to_port": 8001
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "008342298769",
            "id": "sgr-0cc49696aa44a3cef",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.sg.aws_security_group.albappsg",
            "module.vpc.aws_vpc.ShaneVPC3"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "albwebsgin",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:008342298769:security-group-rule/sgr-00a00a5dfd356a79e",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-00a00a5dfd356a79e",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-00080bff3c984ab6b",
            "security_group_rule_id": "sgr-00a00a5dfd356a79e",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "008342298769",
            "id": "sgr-00a00a5dfd356a79e",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.sg.aws_security_group.albwebsg",
            "module.vpc.aws_vpc.ShaneVPC3"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "chatappsgin",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:008342298769:security-group-rule/sgr-01b75219e50200ba2",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 8001,
            "id": "sgr-01b75219e50200ba2",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-004bade0f3cc16e7a",
            "region": "us-east-1",
            "security_group_id": "sg-0ee0dcb4420f91616",
            "security_group_rule_id": "sgr-01b75219e50200ba2",
            "tags": null,
            "tags_all": {},
            "to_port": 8001
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "008342298769",
            "id": "sgr-01b75219e50200ba2",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.sg.aws_security_group.albappsg",
            "module.sg.aws_security_group.chatappsg",
            "module.vpc.aws_vpc.ShaneVPC3"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "chatbastsgin",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:008342298769:security-group-rule/sgr-082710e293c0e0942",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-082710e293c0e0942",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-04baec181f086a7b6",
            "security_group_rule_id": "sgr-082710e293c0e0942",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "008342298769",
            "id": "sgr-082710e293c0e0942",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.sg.aws_security_group.chatbastsg",
            "module.vpc.aws_vpc.ShaneVPC3"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "chatdbsgin",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:008342298769:security-group-rule/sgr-0d0c79e46ad04eb70",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3306,
            "id": "sgr-0d0c79e46ad04eb70",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0ee0dcb4420f91616",
            "region": "us-east-1",
            "security_group_id": "sg-042713e2715bf525d",
            "security_group_rule_id": "sgr-0d0c79e46ad04eb70",
            "tags": null,
            "tags_all": {},
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "008342298769",
            "id": "sgr-0d0c79e46ad04eb70",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.sg.aws_security_group.chatappsg",
            "module.sg.aws_security_group.chatdbsg",
            "module.vpc.aws_vpc.ShaneVPC3"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "chatsgsin",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "chatappsgid",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:008342298769:security-group-rule/sgr-035e4a572d8529a11",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-035e4a572d8529a11",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-04baec181f086a7b6",
            "region": "us-east-1",
            "security_group_id": "sg-0ee0dcb4420f91616",
            "security_group_rule_id": "sgr-035e4a572d8529a11",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "008342298769",
            "id": "sgr-035e4a572d8529a11",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.sg.aws_security_group.chatappsg",
            "module.sg.aws_security_group.chatbastsg",
            "module.sg.aws_security_group.chatdbsg",
            "module.sg.aws_security_group.chatwebsg",
            "module.vpc.aws_vpc.ShaneVPC3"
          ]
        },
        {
          "index_key": "chatdbsgid",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:008342298769:security-group-rule/sgr-079d685e02c1066ee",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-079d685e02c1066ee",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-04baec181f086a7b6",
            "region": "us-east-1",
            "security_group_id": "sg-042713e2715bf525d",
            "security_group_rule_id": "sgr-079d685e02c1066ee",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "008342298769",
            "id": "sgr-079d685e02c1066ee",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.sg.aws_security_group.chatappsg",
            "module.sg.aws_security_group.chatbastsg",
            "module.sg.aws_security_group.chatdbsg",
            "module.sg.aws_security_group.chatwebsg",
            "module.vpc.aws_vpc.ShaneVPC3"
          ]
        },
        {
          "index_key": "chatwebsgid",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:008342298769:security-group-rule/sgr-04098e1d49d2a0cff",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-04098e1d49d2a0cff",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-04baec181f086a7b6",
            "region": "us-east-1",
            "security_group_id": "sg-097b4a1fccf7795c3",
            "security_group_rule_id": "sgr-04098e1d49d2a0cff",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "008342298769",
            "id": "sgr-04098e1d49d2a0cff",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.sg.aws_security_group.chatappsg",
            "module.sg.aws_security_group.chatbastsg",
            "module.sg.aws_security_group.chatdbsg",
            "module.sg.aws_security_group.chatwebsg",
            "module.vpc.aws_vpc.ShaneVPC3"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "chatwebsgin",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:008342298769:security-group-rule/sgr-06d2c879316e8e432",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-06d2c879316e8e432",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-097b4a1fccf7795c3",
            "security_group_rule_id": "sgr-06d2c879316e8e432",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "008342298769",
            "id": "sgr-06d2c879316e8e432",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.sg.aws_security_group.chatwebsg",
            "module.vpc.aws_vpc.ShaneVPC3"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nateip3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06651b0ab5ea916e7",
            "arn": "arn:aws:ec2:us-east-1:008342298769:elastic-ip/eipalloc-06651b0ab5ea916e7",
            "association_id": "eipassoc-05d128d0bc6a1bce6",
            "domain": "vpc",
            "id": "eipalloc-06651b0ab5ea916e7",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0db259b08fdf003e1",
            "private_dns": "ip-10-0-2-46.ec2.internal",
            "private_ip": "10.0.2.46",
            "public_dns": "ec2-100-25-211-139.compute-1.amazonaws.com",
            "public_ip": "100.25.211.139",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "nateip3"
            },
            "tags_all": {
              "Name": "nateip3"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:008342298769:internet-gateway/igw-0c11f2754f78a3727",
            "id": "igw-0c11f2754f78a3727",
            "owner_id": "008342298769",
            "region": "us-east-1",
            "tags": {
              "Name": "igw3"
            },
            "tags_all": {
              "Name": "igw3"
            },
            "vpc_id": "vpc-0a38573db25c26bda"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.ShaneVPC3"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06651b0ab5ea916e7",
            "association_id": "eipassoc-05d128d0bc6a1bce6",
            "connectivity_type": "public",
            "id": "nat-01eb5b63ee460a9ae",
            "network_interface_id": "eni-0db259b08fdf003e1",
            "private_ip": "10.0.2.46",
            "public_ip": "100.25.211.139",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08ea62c5be88ae037",
            "tags": {
              "Name": "natgw3"
            },
            "tags_all": {
              "Name": "natgw3"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nateip3",
            "module.vpc.aws_subnet.pubsuba3",
            "module.vpc.aws_vpc.ShaneVPC3"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prirtb3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:008342298769:route-table/rtb-07289648da01bcff1",
            "id": "rtb-07289648da01bcff1",
            "owner_id": "008342298769",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01eb5b63ee460a9ae",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prirtb3"
            },
            "tags_all": {
              "Name": "prirtb3"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a38573db25c26bda"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "008342298769",
            "id": "rtb-07289648da01bcff1",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.nateip3",
            "module.vpc.aws_nat_gateway.natgw3",
            "module.vpc.aws_subnet.pubsuba3",
            "module.vpc.aws_vpc.ShaneVPC3"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pubrtb3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:008342298769:route-table/rtb-0688ee058dcba576b",
            "id": "rtb-0688ee058dcba576b",
            "owner_id": "008342298769",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c11f2754f78a3727",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pubrtb3"
            },
            "tags_all": {
              "Name": "pubrtb3"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a38573db25c26bda"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "008342298769",
            "id": "rtb-0688ee058dcba576b",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw3",
            "module.vpc.aws_vpc.ShaneVPC3"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prirtbsubass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "prisuba3id",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cb89f70215f69cf3",
            "region": "us-east-1",
            "route_table_id": "rtb-07289648da01bcff1",
            "subnet_id": "subnet-05e24a6b0608e5941"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nateip3",
            "module.vpc.aws_nat_gateway.natgw3",
            "module.vpc.aws_route_table.prirtb3",
            "module.vpc.aws_subnet.prisuba3",
            "module.vpc.aws_subnet.prisubb3",
            "module.vpc.aws_subnet.prisubc3",
            "module.vpc.aws_subnet.pubsuba3",
            "module.vpc.aws_vpc.ShaneVPC3"
          ]
        },
        {
          "index_key": "prisubb3id",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0692778f560b504d6",
            "region": "us-east-1",
            "route_table_id": "rtb-07289648da01bcff1",
            "subnet_id": "subnet-022b407bca8bdba1c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nateip3",
            "module.vpc.aws_nat_gateway.natgw3",
            "module.vpc.aws_route_table.prirtb3",
            "module.vpc.aws_subnet.prisuba3",
            "module.vpc.aws_subnet.prisubb3",
            "module.vpc.aws_subnet.prisubc3",
            "module.vpc.aws_subnet.pubsuba3",
            "module.vpc.aws_vpc.ShaneVPC3"
          ]
        },
        {
          "index_key": "prisubc3id",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06d6ec602d4f35cdc",
            "region": "us-east-1",
            "route_table_id": "rtb-07289648da01bcff1",
            "subnet_id": "subnet-086f4da068886dc43"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nateip3",
            "module.vpc.aws_nat_gateway.natgw3",
            "module.vpc.aws_route_table.prirtb3",
            "module.vpc.aws_subnet.prisuba3",
            "module.vpc.aws_subnet.prisubb3",
            "module.vpc.aws_subnet.prisubc3",
            "module.vpc.aws_subnet.pubsuba3",
            "module.vpc.aws_vpc.ShaneVPC3"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pubrtbsubass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "pubsuba3id",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0778b9fa3949a0326",
            "region": "us-east-1",
            "route_table_id": "rtb-0688ee058dcba576b",
            "subnet_id": "subnet-08ea62c5be88ae037"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw3",
            "module.vpc.aws_route_table.pubrtb3",
            "module.vpc.aws_subnet.pubsuba3",
            "module.vpc.aws_subnet.pubsubb3",
            "module.vpc.aws_subnet.pubsubc3",
            "module.vpc.aws_vpc.ShaneVPC3"
          ]
        },
        {
          "index_key": "pubsubb3id",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e6588c640d2e15db",
            "region": "us-east-1",
            "route_table_id": "rtb-0688ee058dcba576b",
            "subnet_id": "subnet-073354a7309f187bd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw3",
            "module.vpc.aws_route_table.pubrtb3",
            "module.vpc.aws_subnet.pubsuba3",
            "module.vpc.aws_subnet.pubsubb3",
            "module.vpc.aws_subnet.pubsubc3",
            "module.vpc.aws_vpc.ShaneVPC3"
          ]
        },
        {
          "index_key": "pubsubc3id",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0739fc4f209135f4c",
            "region": "us-east-1",
            "route_table_id": "rtb-0688ee058dcba576b",
            "subnet_id": "subnet-0393fe84ad0df3d32"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw3",
            "module.vpc.aws_route_table.pubrtb3",
            "module.vpc.aws_subnet.pubsuba3",
            "module.vpc.aws_subnet.pubsubb3",
            "module.vpc.aws_subnet.pubsubc3",
            "module.vpc.aws_vpc.ShaneVPC3"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prisuba3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:008342298769:subnet/subnet-05e24a6b0608e5941",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.128/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05e24a6b0608e5941",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "008342298769",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "prisuba3"
            },
            "tags_all": {
              "Name": "prisuba3"
            },
            "vpc_id": "vpc-0a38573db25c26bda"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "008342298769",
            "id": "subnet-05e24a6b0608e5941",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.ShaneVPC3"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prisubb3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:008342298769:subnet/subnet-022b407bca8bdba1c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.64/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-022b407bca8bdba1c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "008342298769",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "prisubb3"
            },
            "tags_all": {
              "Name": "prisubb3"
            },
            "vpc_id": "vpc-0a38573db25c26bda"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "008342298769",
            "id": "subnet-022b407bca8bdba1c",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.ShaneVPC3"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prisubc3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:008342298769:subnet/subnet-086f4da068886dc43",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.192/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-086f4da068886dc43",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "008342298769",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "prisubc3"
            },
            "tags_all": {
              "Name": "prisubc3"
            },
            "vpc_id": "vpc-0a38573db25c26bda"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "008342298769",
            "id": "subnet-086f4da068886dc43",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.ShaneVPC3"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pubsuba3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:008342298769:subnet/subnet-08ea62c5be88ae037",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08ea62c5be88ae037",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "008342298769",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "pubsuba3"
            },
            "tags_all": {
              "Name": "pubsuba3"
            },
            "vpc_id": "vpc-0a38573db25c26bda"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "008342298769",
            "id": "subnet-08ea62c5be88ae037",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.ShaneVPC3"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pubsubb3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:008342298769:subnet/subnet-073354a7309f187bd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.160/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-073354a7309f187bd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "008342298769",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "pubsubb3"
            },
            "tags_all": {
              "Name": "pubsubb3"
            },
            "vpc_id": "vpc-0a38573db25c26bda"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "008342298769",
            "id": "subnet-073354a7309f187bd",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.ShaneVPC3"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pubsubc3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:008342298769:subnet/subnet-0393fe84ad0df3d32",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.224/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0393fe84ad0df3d32",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "008342298769",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "pubsubc3"
            },
            "tags_all": {
              "Name": "pubsubc3"
            },
            "vpc_id": "vpc-0a38573db25c26bda"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "008342298769",
            "id": "subnet-0393fe84ad0df3d32",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.ShaneVPC3"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ShaneVPC3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:008342298769:vpc/vpc-0a38573db25c26bda",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.2.0/24",
            "default_network_acl_id": "acl-0b7cc969f553c0777",
            "default_route_table_id": "rtb-0eddaf6d48547913f",
            "default_security_group_id": "sg-0371b3335eda24fe7",
            "dhcp_options_id": "dopt-093a7fcffb9a94a0c",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a38573db25c26bda",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0eddaf6d48547913f",
            "owner_id": "008342298769",
            "region": "us-east-1",
            "tags": {
              "Name": "ShaneVPC3"
            },
            "tags_all": {
              "Name": "ShaneVPC3"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.web",
      "mode": "managed",
      "type": "aws_instance",
      "name": "chatweb3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0bbdd8c17ed981ef9",
            "arn": "arn:aws:ec2:us-east-1:008342298769:instance/i-0fb5791b84d497dcc",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fb5791b84d497dcc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "chatapp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0cb20875f0c05b64e"
              }
            ],
            "primary_network_interface_id": "eni-0cb20875f0c05b64e",
            "private_dns": "ip-10-0-2-62.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.62",
            "public_ip": "98.92.229.192",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-005958ff6db2b5efd",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08ea62c5be88ae037",
            "tags": {
              "Name": "chatweb3"
            },
            "tags_all": {
              "Name": "chatweb3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-097b4a1fccf7795c3"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "008342298769",
            "id": "i-0fb5791b84d497dcc",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.bast.aws_instance.chatbast3",
            "module.sg.aws_security_group.albappsg",
            "module.sg.aws_security_group.albwebsg",
            "module.sg.aws_security_group.chatappsg",
            "module.sg.aws_security_group.chatbastsg",
            "module.sg.aws_security_group.chatdbsg",
            "module.sg.aws_security_group.chatwebsg",
            "module.vpc.aws_subnet.pubsuba3",
            "module.vpc.aws_subnet.pubsubb3",
            "module.vpc.aws_subnet.pubsubc3",
            "module.vpc.aws_vpc.ShaneVPC3",
            "module.web.null_resource.bastion_trigger"
          ]
        }
      ]
    }
  ]
}